Implement display_iframe

--- a/vignettes/LinkGenius_v0_2_0.ipynb
+++ b/vignettes/LinkGenius_v0_2_0.ipynb
@@ -37,15 +37,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee59b0f4-9fb0-4668-a0e2-6c37f00c0242"
+        "outputId": "978317b3-6cba-4a13-97c4-93e4880701b1"
       },
       "source": [
         "zipName <- \"LinkGenius.zip\"\n",
         "zipUrl <- \"https://github.com/ISSACCorp-COS/LinkGenius/archive/refs/heads/master.zip\"\n",
         "download.file(url = zipUrl, destfile = zipName, method = \"auto\", quiet = FALSE, mode = \"wb\")\n",
-        "unzipFolder <- \"/\"\n",
+        "unzipFolder <- \"/content/\"\n",
         "unzip(zipfile = zipName, exdir = unzipFolder)\n",
-        "setws(\"/LinkGenius-master/\")\n",
+        "setwd(\"/content/LinkGenius-master/\")\n",
         "\n",
         "if( !require(fastLink) ) install.packages(\"fastLink\")\n",
         "library(fastLink)\n",
@@ -129,19 +129,7 @@
             "\n",
             "also installing the dependencies ‘pixmap’, ‘sp’, ‘iterators’, ‘ade4’, ‘ggrepel’, ‘xtable’, ‘scatterplot3d’, ‘lpSolve’, ‘foreach’, ‘doParallel’, ‘gtools’, ‘stringdist’, ‘FactoClass’, ‘adagio’, ‘plotrix’, ‘RcppArmadillo’, ‘RcppEigen’\n",
             "\n",
-            "\n",
-            "Loading required package: shiny\n",
-            "\n",
-            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-            "“there is no package called ‘shiny’”\n",
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "also installing the dependencies ‘sass’, ‘jquerylib’, ‘httpuv’, ‘sourcetools’, ‘later’, ‘promises’, ‘bslib’\n",
-            "\n",
-            "\n",
-            "Warning message in install.packages(\"shiny\"):\n",
-            "“installation of package ‘sass’ had non-zero exit status”\n"
+            "\n"
           ],
           "name": "stderr"
         }
