Just return the iframe javascript from the python

--- a/vignettes/LinkGenius_v0_2_0.ipynb
+++ b/vignettes/LinkGenius_v0_2_0.ipynb
@@ -35,9 +35,10 @@
       "metadata": {
         "id": "hXJ-3vD43jX4",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 575
         },
-        "outputId": "978317b3-6cba-4a13-97c4-93e4880701b1"
+        "outputId": "90ab2b15-07b5-4695-97ed-67e351d5394b"
       },
       "source": [
         "zipName <- \"LinkGenius.zip\"\n",
@@ -56,8 +57,120 @@
         "if( !require(reticulate) ) install.packages(\"reticulate\")\n",
         "library(reticulate)\n",
         "iframe <- import(\"proxy_frame.iframe\", as = \"iframe\")\n",
-        "iframe$show()\n",
+        "iframe_script <- iframe$show()\n",
         "\n",
+        "print(iframe_script)\n",
+        "\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Loading required package: fastLink\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘fastLink’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘pixmap’, ‘sp’, ‘iterators’, ‘ade4’, ‘ggrepel’, ‘xtable’, ‘scatterplot3d’, ‘lpSolve’, ‘foreach’, ‘doParallel’, ‘gtools’, ‘stringdist’, ‘FactoClass’, ‘adagio’, ‘plotrix’, ‘RcppArmadillo’, ‘RcppEigen’\n",
+            "\n",
+            "\n",
+            "Loading required package: shiny\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘shiny’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘sass’, ‘jquerylib’, ‘httpuv’, ‘sourcetools’, ‘later’, ‘promises’, ‘bslib’\n",
+            "\n",
+            "\n",
+            "Loading required package: reticulate\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘reticulate’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependency ‘png’\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1] \"Hello from python!\""
+            ],
+            "text/latex": "'Hello from python!'",
+            "text/markdown": "'Hello from python!'",
+            "text/html": [
+              "'Hello from python!'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VS3PWc9E6ie8"
+      },
+      "source": [
+        "\n",
+        "<body>\n",
+        "  <p>This should be the iframe.</p>\n",
+        "  <iframe id=\"inlineFrameExample\"\n",
+        "    title=\"Inline Frame Example\"\n",
+        "    width=\"300\"\n",
+        "    height=\"200\"\n",
+        "    src=\"https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik\">\n",
+        "</iframe>\n",
+        "</body>\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LXbzSODq9iHH",
+        "outputId": "c0410076-c680-4997-e044-6767badab531",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "library(IRdisplay)\n",
+        "display_html(iframe_script)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<body>text</body>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ETzf6PRqAPe1"
+      },
+      "source": [
         "# Define UI for app that draws a histogram ----\n",
         "ui <- fluidPage(\n",
         "\n",
@@ -116,24 +229,7 @@
         "#shinyApp(ui = ui, server = server)\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Loading required package: fastLink\n",
-            "\n",
-            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-            "“there is no package called ‘fastLink’”\n",
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "also installing the dependencies ‘pixmap’, ‘sp’, ‘iterators’, ‘ade4’, ‘ggrepel’, ‘xtable’, ‘scatterplot3d’, ‘lpSolve’, ‘foreach’, ‘doParallel’, ‘gtools’, ‘stringdist’, ‘FactoClass’, ‘adagio’, ‘plotrix’, ‘RcppArmadillo’, ‘RcppEigen’\n",
-            "\n",
-            "\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
