Just return the shell string

--- a/vignettes/LinkGenius_v0_2_0.ipynb
+++ b/vignettes/LinkGenius_v0_2_0.ipynb
@@ -35,10 +35,9 @@
       "metadata": {
         "id": "hXJ-3vD43jX4",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 575
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "90ab2b15-07b5-4695-97ed-67e351d5394b"
+        "outputId": "79dc3201-910e-464b-9860-2e849b4343ff"
       },
       "source": [
         "zipName <- \"LinkGenius.zip\"\n",
@@ -60,7 +59,8 @@
         "iframe_script <- iframe$show()\n",
         "\n",
         "print(iframe_script)\n",
-        "\n"
+        "\n",
+        "library(IRdisplay)"
       ],
       "execution_count": 1,
       "outputs": [
@@ -101,20 +101,11 @@
           "name": "stderr"
         },
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "[1] \"Hello from python!\""
-            ],
-            "text/latex": "'Hello from python!'",
-            "text/markdown": "'Hello from python!'",
-            "text/html": [
-              "'Hello from python!'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
+          "output_type": "stream",
+          "text": [
+            "<IPython.core.display.Javascript object>\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -134,35 +125,6 @@
         "    src=\"https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik\">\n",
         "</iframe>\n",
         "</body>\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LXbzSODq9iHH",
-        "outputId": "c0410076-c680-4997-e044-6767badab531",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "library(IRdisplay)\n",
-        "display_html(iframe_script)"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<body>text</body>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
       ]
     },
     {
@@ -226,7 +188,8 @@
         "\n",
         "}\n",
         "\n",
-        "#shinyApp(ui = ui, server = server)\n"
+        "display_javascript(iframe_script)\n",
+        "shinyApp(ui = ui, server = server)\n"
       ],
       "execution_count": null,
       "outputs": []
