Allow controlling port number from caller.

--- a/vignettes/LinkGenius_v0_2_0.ipynb
+++ b/vignettes/LinkGenius_v0_2_0.ipynb
@@ -37,7 +37,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "79dc3201-910e-464b-9860-2e849b4343ff"
+        "outputId": "b1b16151-52b3-47d5-fc82-47809d762bd9"
       },
       "source": [
         "zipName <- \"LinkGenius.zip\"\n",
@@ -47,18 +47,18 @@
         "unzip(zipfile = zipName, exdir = unzipFolder)\n",
         "setwd(\"/content/LinkGenius-master/\")\n",
         "\n",
+        "if( !require(reticulate) ) install.packages(\"reticulate\")\n",
+        "library(reticulate)\n",
+        "iframe <- import(\"proxy_frame.iframe\", as = \"iframe\")\n",
+        "iframe_script <- iframe$show(6006)\n",
+        "\n",
+        "print(iframe_script)\n",
+        "\n",
         "if( !require(fastLink) ) install.packages(\"fastLink\")\n",
         "library(fastLink)\n",
         "\n",
         "if( !require(shiny) ) install.packages(\"shiny\")\n",
         "library(shiny)\n",
-        "\n",
-        "if( !require(reticulate) ) install.packages(\"reticulate\")\n",
-        "library(reticulate)\n",
-        "iframe <- import(\"proxy_frame.iframe\", as = \"iframe\")\n",
-        "iframe_script <- iframe$show()\n",
-        "\n",
-        "print(iframe_script)\n",
         "\n",
         "library(IRdisplay)"
       ],
@@ -67,35 +67,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Loading required package: fastLink\n",
-            "\n",
-            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-            "“there is no package called ‘fastLink’”\n",
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "also installing the dependencies ‘pixmap’, ‘sp’, ‘iterators’, ‘ade4’, ‘ggrepel’, ‘xtable’, ‘scatterplot3d’, ‘lpSolve’, ‘foreach’, ‘doParallel’, ‘gtools’, ‘stringdist’, ‘FactoClass’, ‘adagio’, ‘plotrix’, ‘RcppArmadillo’, ‘RcppEigen’\n",
-            "\n",
-            "\n",
-            "Loading required package: shiny\n",
-            "\n",
-            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-            "“there is no package called ‘shiny’”\n",
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "also installing the dependencies ‘sass’, ‘jquerylib’, ‘httpuv’, ‘sourcetools’, ‘later’, ‘promises’, ‘bslib’\n",
-            "\n",
-            "\n",
             "Loading required package: reticulate\n",
-            "\n",
-            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-            "“there is no package called ‘reticulate’”\n",
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "also installing the dependency ‘png’\n",
-            "\n",
             "\n"
           ],
           "name": "stderr"
@@ -103,34 +75,31 @@
         {
           "output_type": "stream",
           "text": [
-            "<IPython.core.display.Javascript object>\n"
+            "[1] \"\\n        (async () => {\\n            const url = await google.colab.kernel.proxyPort(3771, {\\\"cache\\\": true});\\n            console.log(`Adding iframe from URL:${url}`);\\n            const iframe = document.createElement('iframe');\\n            iframe.src = url;\\n            iframe.setAttribute('width', '100%');\\n            iframe.setAttribute('height', '500');\\n            iframe.setAttribute('frameborder', 0);\\n            document.body.appendChild(iframe);\\n        })();\\n    \"\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Loading required package: fastLink\n",
+            "\n",
+            "Loading required package: shiny\n",
+            "\n"
+          ],
+          "name": "stderr"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VS3PWc9E6ie8"
-      },
-      "source": [
-        "\n",
-        "<body>\n",
-        "  <p>This should be the iframe.</p>\n",
-        "  <iframe id=\"inlineFrameExample\"\n",
-        "    title=\"Inline Frame Example\"\n",
-        "    width=\"300\"\n",
-        "    height=\"200\"\n",
-        "    src=\"https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik\">\n",
-        "</iframe>\n",
-        "</body>\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ETzf6PRqAPe1"
+        "id": "ETzf6PRqAPe1",
+        "outputId": "7c719754-97be-437d-f1ab-100f0155b962",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 573
+        }
       },
       "source": [
         "# Define UI for app that draws a histogram ----\n",
@@ -192,7 +161,39 @@
         "shinyApp(ui = ui, server = server)\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "        (async () => {\n",
+              "            const url = await google.colab.kernel.proxyPort(3771, {\"cache\": true});\n",
+              "            console.log(`Adding iframe from URL:${url}`);\n",
+              "            const iframe = document.createElement('iframe');\n",
+              "            iframe.src = url;\n",
+              "            iframe.setAttribute('width', '100%');\n",
+              "            iframe.setAttribute('height', '500');\n",
+              "            iframe.setAttribute('frameborder', 0);\n",
+              "            document.body.appendChild(iframe);\n",
+              "        })();\n",
+              "    "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Listening on http://127.0.0.1:6006\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     }
   ]
 }
