Just call create_iframe directly

--- a/vignettes/LinkGenius_v0_2_0.ipynb
+++ b/vignettes/LinkGenius_v0_2_0.ipynb
@@ -27,7 +27,7 @@
         "\n",
         "This notebook runs the [Link Genius Tool](https://github.com/ISSACCorp-COS/LinkGenius). See the link for more details about using the shiny application in other ways.\n",
         "\n",
-        "The following cell will load the libraries and code for you.  This can take ten minutes or so.  However, it will complete eventually.  After the first time, it will be faster until the end of your colab session."
+        "The following cell will load the libraries and code for you.  This can take ten minutes or so.  However, it will complete eventually."
       ]
     },
     {
@@ -37,7 +37,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1b16151-52b3-47d5-fc82-47809d762bd9"
+        "outputId": "10c052cd-b326-4750-8944-81a4c639cfac"
       },
       "source": [
         "zipName <- \"LinkGenius.zip\"\n",
@@ -50,7 +50,8 @@
         "if( !require(reticulate) ) install.packages(\"reticulate\")\n",
         "library(reticulate)\n",
         "iframe <- import(\"proxy_frame.iframe\", as = \"iframe\")\n",
-        "iframe_script <- iframe$show(6006)\n",
+        "port <- 6006\n",
+        "iframe_script <- iframe$create_iframe(port, 500)\n",
         "\n",
         "print(iframe_script)\n",
         "\n",
@@ -68,6 +69,14 @@
           "output_type": "stream",
           "text": [
             "Loading required package: reticulate\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘reticulate’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependency ‘png’\n",
+            "\n",
             "\n"
           ],
           "name": "stderr"
@@ -75,7 +84,7 @@
         {
           "output_type": "stream",
           "text": [
-            "[1] \"\\n        (async () => {\\n            const url = await google.colab.kernel.proxyPort(3771, {\\\"cache\\\": true});\\n            console.log(`Adding iframe from URL:${url}`);\\n            const iframe = document.createElement('iframe');\\n            iframe.src = url;\\n            iframe.setAttribute('width', '100%');\\n            iframe.setAttribute('height', '500');\\n            iframe.setAttribute('frameborder', 0);\\n            document.body.appendChild(iframe);\\n        })();\\n    \"\n"
+            "[1] \"\\n        (async () => {\\n            const url = await google.colab.kernel.proxyPort(6006, {\\\"cache\\\": true});\\n            console.log(`Adding iframe from URL:${url}`);\\n            const iframe = document.createElement('iframe');\\n            iframe.src = url;\\n            iframe.setAttribute('width', '100%');\\n            iframe.setAttribute('height', '500');\\n            iframe.setAttribute('frameborder', 0);\\n            document.body.appendChild(iframe);\\n        })();\\n    \"\n"
           ],
           "name": "stdout"
         },
@@ -84,7 +93,23 @@
           "text": [
             "Loading required package: fastLink\n",
             "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘fastLink’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘pixmap’, ‘sp’, ‘iterators’, ‘ade4’, ‘ggrepel’, ‘xtable’, ‘scatterplot3d’, ‘lpSolve’, ‘foreach’, ‘doParallel’, ‘gtools’, ‘stringdist’, ‘FactoClass’, ‘adagio’, ‘plotrix’, ‘RcppArmadillo’, ‘RcppEigen’\n",
+            "\n",
+            "\n",
             "Loading required package: shiny\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘shiny’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘sass’, ‘jquerylib’, ‘httpuv’, ‘sourcetools’, ‘later’, ‘promises’, ‘bslib’\n",
+            "\n",
             "\n"
           ],
           "name": "stderr"
@@ -95,11 +120,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ETzf6PRqAPe1",
-        "outputId": "7c719754-97be-437d-f1ab-100f0155b962",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
-        }
+        },
+        "outputId": "87760fdc-7664-4a89-b664-9b07585f0f66"
       },
       "source": [
         "# Define UI for app that draws a histogram ----\n",
@@ -158,7 +183,7 @@
         "}\n",
         "\n",
         "display_javascript(iframe_script)\n",
-        "shinyApp(ui = ui, server = server)\n"
+        "shinyApp(ui = ui, server = server, options = list(port=port))\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -168,7 +193,7 @@
             "application/javascript": [
               "\n",
               "        (async () => {\n",
-              "            const url = await google.colab.kernel.proxyPort(3771, {\"cache\": true});\n",
+              "            const url = await google.colab.kernel.proxyPort(6006, {\"cache\": true});\n",
               "            console.log(`Adding iframe from URL:${url}`);\n",
               "            const iframe = document.createElement('iframe');\n",
               "            iframe.src = url;\n",
@@ -188,7 +213,7 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Listening on http://127.0.0.1:6006\n",
+            "Listening on http://127.0.0.1:4710\n",
             "\n"
           ],
           "name": "stderr"
